--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-mongodb+srv://automob_user:<automob123>@bookingdetail.kwoxcmo.mongodb.net/?retryWrites=true&w=majority&appName=BookingDetail
+MONGO_URI=mongodb+srv://automob_user:<automob123>@bookingdetail.kwoxcmo.mongodb.net/?retryWrites=true&w=majority&appName=BookingDetail
